--- a/backend-service/requirements.txt
+++ b/backend-service/requirements.txt
@@ -4,15 +4,21 @@ aws-cdk.asset-awscli-v1==2.2.233
 aws-cdk.asset-node-proxy-agent-v6==2.1.0
 aws-cdk.cloud-assembly-schema==41.2.0
 awscli==1.40.2
+blinker==1.9.0
 boto3==1.38.3
 botocore==1.38.3
 cattrs==24.1.3
+click==8.1.8
 colorama==0.4.6
 constructs==10.4.2
 docutils==0.19
+Flask==3.1.0
 importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
 jmespath==1.0.1
 jsii==1.111.0
+MarkupSafe==3.0.2
 publication==0.0.3
 pyasn1==0.6.1
 python-dateutil==2.9.0.post0
@@ -23,3 +29,4 @@ six==1.17.0
 typeguard==2.13.3
 typing_extensions==4.13.2
 urllib3==2.4.0
+Werkzeug==3.1.3
